--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
           <li class="active"><a href="/">Home<span class="sr-only">(current)</span></a></li>
           <li class="active"><a href="/hotdog">hotdog</a></li>
           <li class="active"><a href="/reversi">reversi</a></li>
+          <li class="active"><a href="/tictactoe">tictactoe</a></li>
           <li><a href="mailto:balanga10@gmail.com?Subject=hotdog%20Contact">Contact me</a></li>
       </ul>
     </nav>
