login screen, without functions

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
-
+<!-- 
     <nav class="navbar navbar-inverse" role="navigation" style="padding-left:10px;">
       <ul class="nav navbar-nav">
           <li class="active"><a href="/">Home<span class="sr-only">(current)</span></a></li>
@@ -28,16 +28,16 @@
           <li class="active"><a href="/tictactoe">tictactoe</a></li>
           <li><a href="mailto:balanga10@gmail.com?Subject=hotdog%20Contact">Contact me</a></li>
       </ul>
-    </nav>
+    </nav> -->
 
-    <div class="container container-table" style="padding-bottom:20px">
+    <!-- <div class="container container-table" style="padding-bottom:20px"> -->
         <div id="root"></div>
-    </div>
+    <!-- </div> -->
 
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container">
         <p class="text-muted" style="float:left">All rights reserved to Roi, Kobi and Ori</p>
       </div>
-    </footer>
+    </footer> -->
   </body>
 </html>
